calculadora sin placeholder

--- a/TRABAJO/sobreNosotros.html
+++ b/TRABAJO/sobreNosotros.html
@@ -68,16 +68,14 @@
                         </span>
                     </h3>
                     <div class="questions__show">
-                        <p>
-                            Si quiere información adicional acerca de un inmueble, dentro del mismo encontrará un formulario de consulta; tras rellenarlo,
-                            uno de nuestros miembros se pondrá en contacto con usted. </p>
-
-                           <p> Si desea poner en venta o alquiler su propiedad, en el apartado<b> "Gestiona tu propiedad"</b> podrá rellenar un formulario 
-                            con sus datos de contacto, y de igual manera, uno de nuestros agentes se pondrá en contacto con usted para comenzar la gestión de su propiedad. </p>
-
-                            <p> Si tiene alguna duda o consulta referente a otros temas, podrá ponerse en contacto con nosotros a través del correo electrónico o el 
-                            número de teléfono que aparecen en el pie de página.</p>
-                        </p>
+                            <ul>
+                                <li>Si quiere información adicional acerca de un inmueble, dentro del mismo encontrará un formulario de consulta; tras rellenarlo,
+                                    uno de nuestros miembros se pondrá en contacto con usted.</li>
+                                <li>Si desea poner en venta o alquiler su propiedad, en el apartado<b> "Gestiona tu propiedad"</b> podrá rellenar un formulario 
+                                    con sus datos de contacto, y de igual manera, uno de nuestros agentes se pondrá en contacto con usted para comenzar la gestión de su propiedad.</li>
+                                <li>Si tiene alguna duda o consulta referente a otros temas, podrá ponerse en contacto con nosotros a través del correo electrónico o el 
+                                    número de teléfono que aparecen en el pie de página.</li>
+                            </ul> 
                     </div>
                 </div>
             </article>
@@ -126,7 +124,7 @@
                 <div class="col-md-12">
                     <div class="section-header text-center text-white pb-5">
                         <h2>Integrantes del equipo</h2>
-                        <p>
+                        <p class="parrafo-perfil">
                             Nuestro equipo consta de cuatro integrantes de una gran calidad <br> y profesionalidad
                         </p>
                     </div>
@@ -145,13 +143,13 @@
                                 </p>
                                 <p class="socials">
                                     <a href="https://www.twitter.com" target="_blank"
-                                        class="bi bi-twitter  text-white mx-1"></a>
+                                        class="bi bi-twitter mx-1"></a>
                                     <a href="https://www.facebook.com" target="_blank"
-                                        class="bi bi-facebook  text-white mx-1"></a>
+                                        class="bi bi-facebook mx-1"></a>
                                     <a href="https://www.instagram.com" target="_blank"
-                                        class="bi bi-instagram  text-white mx-1"></a>
+                                        class="bi bi-instagram mx-1"></a>
                                     <a href="https://www.linkedin.com" target="_blank"
-                                        class="bi bi-linkedin  text-white mx-1"></a>
+                                        class="bi bi-linkedin mx-1"></a>
                                 </p>
                             </div>
                         </div>
@@ -166,13 +164,13 @@
                                 </p>
                                 <p class="socials">
                                     <a href="https://www.twitter.com" target="_blank"
-                                        class="bi bi-twitter  text-white mx-1"></a>
+                                        class="bi bi-twitter mx-1"></a>
                                     <a href="https://www.facebook.com" target="_blank"
-                                        class="bi bi-facebook  text-white mx-1"></a>
+                                        class="bi bi-facebook mx-1"></a>
                                     <a href="https://www.instagram.com" target="_blank"
-                                        class="bi bi-instagram  text-white mx-1"></a>
+                                        class="bi bi-instagram mx-1"></a>
                                     <a href="https://www.linkedin.com" target="_blank"
-                                        class="bi bi-linkedin  text-white mx-1"></a>
+                                        class="bi bi-linkedin mx-1"></a>
                                 </p>
                             </div>
                         </div>
@@ -187,13 +185,13 @@
                                 </p>
                                 <p class="socials">
                                     <a href="https://www.twitter.com" target="_blank"
-                                        class="bi bi-twitter  text-white mx-1"></a>
+                                        class="bi bi-twitter mx-1"></a>
                                     <a href="https://www.facebook.com" target="_blank"
-                                        class="bi bi-facebook  text-white mx-1"></a>
+                                        class="bi bi-facebook mx-1"></a>
                                     <a href="https://www.instagram.com" target="_blank"
-                                        class="bi bi-instagram  text-white mx-1"></a>
+                                        class="bi bi-instagram mx-1"></a>
                                     <a href="https://www.linkedin.com" target="_blank"
-                                        class="bi bi-linkedin  text-white mx-1"></a>
+                                        class="bi bi-linkedin mx-1"></a>
                                 </p>
                             </div>
                         </div>
@@ -204,17 +202,17 @@
                                 <img src="img/persona4.png" class="img-fluid rounded-circle perfil" alt="">
                                 <h3 class="card-title py-2">Francisco</h3>
                                 <p class="card-text">
-                                    Experto en finanzas, confiable y profesional.
+                                    Experto en finanzas, confiable y profesional, 20 años de experiencia.
                                 </p>
                                 <p class="socials">
                                     <a href="https://www.twitter.com" target="_blank"
-                                        class="bi bi-twitter  text-white mx-1"></a>
+                                        class="bi bi-twitter mx-1"></a>
                                     <a href="https://www.facebook.com" target="_blank"
-                                        class="bi bi-facebook  text-white mx-1"></a>
+                                        class="bi bi-facebook mx-1"></a>
                                     <a href="https://www.instagram.com" target="_blank"
-                                        class="bi bi-instagram  text-white mx-1"></a>
+                                        class="bi bi-instagram mx-1"></a>
                                     <a href="https://www.linkedin.com" target="_blank"
-                                        class="bi bi-linkedin  text-white mx-1"></a>
+                                        class="bi bi-linkedin mx-1"></a>
                                 </p>
                             </div>
                         </div>
