--- a/TRABAJO/detalle_piso.html
+++ b/TRABAJO/detalle_piso.html
@@ -9,7 +9,7 @@
     <title>Málaga Dream Home</title>
 
     <!--Icono pestaña del navegador-->
-    <link rel="icon" type="favicon2/png" href="./img/favicon2.png">
+    <link rel="icon" type="image/png" href="./img/favicon2.png" alt="Icono de la pestaña del navegador">
 
     <!-- All CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="navbarS">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link " aria-current="page">Inicio</a>
+                        <a href="index.html" class="nav-link">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a href="calculadora.html" class="nav-link">Calcula tu Hipoteca</a>
@@ -61,7 +61,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="imageModalLabel"></h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
                 </div>
                 <div class="modal-body">
                     <div id="modalCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -195,7 +195,7 @@
             if (index === 0) {
                 item.classList.add("active");
             }
-            item.innerHTML = `<img src="${imageSrc}" class="d-block w-100" alt="Imagen del piso ${index + 1}" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-slide-to="${index}">`;
+            item.innerHTML = `<img src="${imageSrc}" class="d-block w-100" alt="Imagen del piso" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-slide-to="${index}">`;
             carouselInner.appendChild(item);
 
             const modalItem = document.createElement("div");
