--- a/TRABAJO/index.html
+++ b/TRABAJO/index.html
@@ -9,7 +9,7 @@
     <title>Málaga Dream Home</title>
 
     <!--Icono pestaña del navegador-->
-    <link rel="icon" type="favicon2/png" href="./img/favicon2.png">
+    <link rel="icon" type="favicon2/png" href="./img/favicon2.png" alt="Icono de la pestaña del navegador">
 
     <!-- All CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -93,15 +93,15 @@
         </div>
 
         <!-- para las flechitas del carrousel-->
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselE" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselE" data-bs-slide="prev" aria-label="Anterior">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
+            <span class="visually-hidden">Anterior</span>
         </button>
-
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselE" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselE" data-bs-slide="next" aria-label="Siguiente">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
+            <span class="visually-hidden">Siguiente</span>
         </button>
+        
     </div>
 <!---------------------------------------------------------------------------------->
 <!------------------------------------BUSCAR---------------------------------------------->
@@ -204,7 +204,7 @@
             <div class="box">
                 <figure>
                     <a href="#">
-                        <img src="img/logo_footer.png" alt="logo en el que se ve una casa ">
+                        <img src="img/logo_footer.png" alt="Logo de Málaga Dream Home">
                     </a>
                 </figure>
             </div>
@@ -217,10 +217,10 @@
             <div class="box">
                 <h2>SIGUENOS</h2>
                 <div class="redes-social">
-                    <a href="https://www.twitter.com" target="_blank" class="bi bi-twitter"></a>
-                    <a href="https://www.facebook.com" target="_blank" class="bi bi-facebook"></a>
-                    <a href="https://www.instagram.com" target="_blank" class="bi bi-instagram"></a>
-                    <a href="https://www.linkedin.com" target="_blank" class="bi bi-linkedin"></a>
+                    <a href="https://www.twitter.com" target="_blank" class="bi bi-twitter" alt="Twitter"></a>
+                    <a href="https://www.facebook.com" target="_blank" class="bi bi-facebook" alt="Facebook"></a>
+                    <a href="https://www.instagram.com" target="_blank" class="bi bi-instagram" alt="Instagram"></a>
+                    <a href="https://www.linkedin.com" target="_blank" class="bi bi-linkedin" alt="Linkedin"></a>
                 </div>
             </div>
         </div>
