--- a/TRABAJO/gestionaPropiedad.html
+++ b/TRABAJO/gestionaPropiedad.html
@@ -61,6 +61,8 @@
     </nav>
 
 <!-----------------------------------------------DATOS------------------------------------------------------->
+
+
 <section class="contact section-padding">
     <div class="container mt-5 mb-5">
         <div class="row">
@@ -110,6 +112,10 @@
         </div>
     </div>
 </section>
+
+<div class="help-icon" onclick="showHelpMessage()">
+    i
+</div>
 
 
  <!---------------------------------------------------------------------------------->
