--- a/TRABAJO/calculadora.html
+++ b/TRABAJO/calculadora.html
@@ -200,10 +200,10 @@
             <div class="box">
                 <h2>SIGUENOS</h2>
                 <div class="redes-social">
-                    <a href="https://www.twitter.com" target="_blank" class="bi bi-twitter"></a>
-                    <a href="https://www.facebook.com" target="_blank" class="bi bi-facebook"></a>
-                    <a href="https://www.instagram.com" target="_blank" class="bi bi-instagram"></a>
-                    <a href="https://www.linkedin.com" target="_blank" class="bi bi-linkedin"></a>
+                    <a href="https://www.twitter.com" target="_blank" class="bi bi-twitter" aria-label="twitter"></a>
+                    <a href="https://www.facebook.com" target="_blank" class="bi bi-facebook"aria-label="facebook"></a>
+                    <a href="https://www.instagram.com" target="_blank" class="bi bi-instagram" aria-label="instagram"></a>
+                    <a href="https://www.linkedin.com" target="_blank" class="bi bi-linkedin" aria-label="linkedin"></a>
                 </div>
             </div>
         </div>
