--- a/TRABAJO/detalle_piso.html
+++ b/TRABAJO/detalle_piso.html
@@ -106,11 +106,11 @@
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselContainer" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
+                        <span class="visually-hidden">Anterior Imagen</span>
                     </button>
                     <button class="carousel-control-next" type="button" data-bs-target="#carouselContainer" data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
+                        <span class="visually-hidden">Siguiente Imagen</span>
                     </button>
                 </div>
             </div>
@@ -335,7 +335,7 @@ function showHelpMessage() {
             <div class="box">
                 <figure>
                     <a href="#">
-                        <img src="img/logo_footer.png" alt="logo en el que se ve una casa ">
+                        <img src="img/logo_footer.png" alt="Logo Malaga DreamHome">
                     </a>
                 </figure>
             </div>
@@ -348,10 +348,10 @@ function showHelpMessage() {
             <div class="box">
                 <h2>SIGUENOS</h2>
                 <div class="redes-social">
-                    <a href="https://www.twitter.com" target="_blank" class="bi bi-twitter"></a>
-                    <a href="https://www.facebook.com" target="_blank" class="bi bi-facebook"></a>
-                    <a href="https://www.instagram.com" target="_blank" class="bi bi-instagram"></a>
-                    <a href="https://www.linkedin.com" target="_blank" class="bi bi-linkedin"></a>
+                    <a href="https://www.twitter.com" target="_blank" class="bi bi-twitter" aria-label="twitter"></a>
+                    <a href="https://www.facebook.com" target="_blank" class="bi bi-facebook"aria-label="facebook"></a>
+                    <a href="https://www.instagram.com" target="_blank" class="bi bi-instagram" aria-label="instagram"></a>
+                    <a href="https://www.linkedin.com" target="_blank" class="bi bi-linkedin" aria-label="linkedin"></a>
                 </div>
             </div>
         </div>
