--- a/TRABAJO/index.html
+++ b/TRABAJO/index.html
@@ -131,12 +131,12 @@
             </select>
         </div>
         <div class="filtro-precio">
-            <label for="filtroPrecioDesde" id="labelPrecio">Precio:</label>
-            <input type="number" id="filtroPrecioDesde" min="0" class="small-input">
+            <label for="filtroPrecioDesde">Precio:</label>
+            <input type="number" id="filtroPrecioDesde" min="0" class="small-input" aria-label="Precio mínimo">
             <label for="filtroPrecioHasta" id="guion">-</label>
-            <input type="number" id="filtroPrecioHasta" min="0" class="small-input">
+            <input type="number" id="filtroPrecioHasta" min="0" class="small-input" aria-label="Precio máximo">            
         </div>
- 
+
         <!-- Fila 2 -->
         <div class="filtromuni">
             <label for="filtroMunicipio">Municipio:</label>
@@ -166,6 +166,7 @@
                 <option value="excelente">Excelente</option>
             </select>
         </div>
+        
         <!-- Fila 3 -->
         <div class="filtrohab">
             <label for="filtroHabitaciones">Nº Habitaciones</label>
@@ -177,16 +178,16 @@
         </div>
         <div class="filtro-precio">
             <label for="filtroSuperficieDesde">Superficie:</label>
-            <input type="number" id="filtroSuperficieDesde" min="0" class="small-input">
-            <label for="filtroSuperficieHasta" id="guion">-</label>
-            <input type="number" id="filtroSuperficieHasta" min="0" class="small-input">
+            <input type="number" id="filtroSuperficieDesde" min="0" class="small-input" aria-label="Superficie Minima">
+            <input type="number" id="filtroSuperficieHasta" min="0" class="small-input" aria-label="Superficie Maxima">
         </div>       
     </div>
 </div>
+
 <div class="container text-center"> <!-- Contenedor adicional para centrar el botón -->
     <button id="btnEliminarFiltros" class="btn btn-secondary">Eliminar Filtros</button> 
     <button id="btnAplicarFiltros" class="btn btn-primary">Aplicar Filtros</button>
-</div>
+</div>  
 
 <div id="totalPisos" class="container text-center mt-4">
     <p class="text-white">Total de inmuebles mostrados: <span id="totalPisosCount">0</span></p>
@@ -232,10 +233,10 @@
             <div class="box">
                 <h2>SIGUENOS</h2>
                 <div class="redes-social">
-                    <a href="https://www.twitter.com" target="_blank" class="bi bi-twitter" alt="Twitter"></a>
-                    <a href="https://www.facebook.com" target="_blank" class="bi bi-facebook" alt="Facebook"></a>
-                    <a href="https://www.instagram.com" target="_blank" class="bi bi-instagram" alt="Instagram"></a>
-                    <a href="https://www.linkedin.com" target="_blank" class="bi bi-linkedin" alt="Linkedin"></a>
+                    <a href="https://www.twitter.com" target="_blank" class="bi bi-twitter" aria-label="twitter"></a>
+                    <a href="https://www.facebook.com" target="_blank" class="bi bi-facebook"aria-label="facebook"></a>
+                    <a href="https://www.instagram.com" target="_blank" class="bi bi-instagram" aria-label="instagram"></a>
+                    <a href="https://www.linkedin.com" target="_blank" class="bi bi-linkedin" aria-label="linkedin"></a>
                 </div>
             </div>
         </div>
