--- a/TRABAJO/sobreNosotros.html
+++ b/TRABAJO/sobreNosotros.html
@@ -147,7 +147,7 @@
                                     <a href="https://www.facebook.com" target="_blank"
                                         class="bi bi-facebook mx-1"></a>
                                     <a href="https://www.instagram.com" target="_blank"
-                                        class="bi bi-instagram mx-1"></a>
+                                        class="bi b i-instagram mx-1"></a>
                                     <a href="https://www.linkedin.com" target="_blank"
                                         class="bi bi-linkedin mx-1"></a>
                                 </p>
@@ -240,10 +240,10 @@
             <div class="box">
                 <h2>SIGUENOS</h2>
                 <div class="redes-social">
-                    <a href="https://www.twitter.com" target="_blank" class="bi bi-twitter"></a>
-                    <a href="https://www.facebook.com" target="_blank" class="bi bi-facebook"></a>
-                    <a href="https://www.instagram.com" target="_blank" class="bi bi-instagram"></a>
-                    <a href="https://www.linkedin.com" target="_blank" class="bi bi-linkedin"></a>
+                    <a href="https://www.twitter.com" target="_blank" class="bi bi-twitter" aria-label="twitter"></a>
+                    <a href="https://www.facebook.com" target="_blank" class="bi bi-facebook"aria-label="facebook"></a>
+                    <a href="https://www.instagram.com" target="_blank" class="bi bi-instagram" aria-label="instagram"></a>
+                    <a href="https://www.linkedin.com" target="_blank" class="bi bi-linkedin" aria-label="linkedin"></a>
                 </div>
             </div>
         </div>
