--- a/TRABAJO/index.html
+++ b/TRABAJO/index.html
@@ -31,7 +31,7 @@
         <div class="container">
             <a href="#" class="navbar-brand"> <span class="text-primary">Málaga</span>DreamHome</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarS"
-                aria-controls="navbarS" aria-expanded="false" aria-label="Toggle navigation">
+                aria-controls="navbarS" aria-expanded="false"  aria-label="Botón navegación">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarS">
@@ -85,7 +85,7 @@
 
             <div class="carousel-item">
                 <img src="img/FotosMalaga/callelarios.jpg" class="d-block w-100"
-                    alt="Imagen de la playa de la Malagueta de Málaga">
+                    alt="Imagen de la calle Larios de Málaga">
                 <div class="carousel-caption">
                     <h5>Calle Larios</h5>
                 </div>
