--- a/TRABAJO/sobreNosotros.html
+++ b/TRABAJO/sobreNosotros.html
@@ -29,7 +29,7 @@
         <div class="container">
             <a href="#" class="navbar-brand"> <span class="text-primary">Málaga</span>DreamHome</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarS"
-                aria-controls="navbarS" aria-expanded="false" aria-label="Toggle navigation">
+                aria-controls="navbarS" aria-expanded="false" aria-label="Botón navegación">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarS">
@@ -147,7 +147,7 @@
                                     <a href="https://www.facebook.com" target="_blank"
                                         class="bi bi-facebook mx-1"></a>
                                     <a href="https://www.instagram.com" target="_blank"
-                                        class="bi b i-instagram mx-1"></a>
+                                        class="bi bi-instagram mx-1"></a>
                                     <a href="https://www.linkedin.com" target="_blank"
                                         class="bi bi-linkedin mx-1"></a>
                                 </p>
