--- a/TRABAJO/detalle_piso.html
+++ b/TRABAJO/detalle_piso.html
@@ -27,7 +27,7 @@
         <div class="container">
             <a href="index.html" class="navbar-brand"> <span class="text-primary">Málaga</span>DreamHome</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarS"
-                aria-controls="navbarS" aria-expanded="false" aria-label="Toggle navigation">
+                aria-controls="navbarS" aria-expanded="false" aria-label="Botón navegación">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarS">
