--- a/TRABAJO/gestionaPropiedad.html
+++ b/TRABAJO/gestionaPropiedad.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Málaga Dream Home</title>
 
     <!--Icono pestaña del navegador-->
@@ -15,148 +14,118 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-    <!--iconos bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
-    <!--select del bootstrap-->
-
     <link rel="stylesheet" href="css/gestionaPropiedad.css">
-
 </head>
 
 <body>
 
-
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-
         <div class="container">
-            <a href="index.html" class="navbar-brand"> <span class="text-primary">Málaga</span>DreamHome</a>
-
+            <a href="index.html" class="navbar-brand"> <span class="text-primary">Málaga</span> DreamHome</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarS"
-                aria-controls="navbarS" aria-expanded="false" aria-label="Toggle navigation">
+                aria-controls="navbarS" aria-expanded="false" aria-label="Botón de navegación">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
             <div class="collapse navbar-collapse" id="navbarS">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link" >Inicio</a>
+                        <a href="index.html" class="nav-link">Inicio</a>
                     </li>
-
                     <li class="nav-item">
                         <a href="calculadora.html" class="nav-link">Calcula tu hipoteca</a>
                     </li>
-
-                   <li class="nav-item">
+                    <li class="nav-item">
                         <a href="sobreNosotros.html" class="nav-link">Sobre Nosotros</a>
                     </li>
-
                     <li class="nav-item">
                         <a href="#" class="nav-link active" aria-current="page">Gestiona tu propiedad</a>
                     </li>
                 </ul>
             </div>
-
         </div>
-
     </nav>
 
-<!-----------------------------------------------DATOS------------------------------------------------------->
-
-
-<section class="contact section-padding">
-    <div class="container mt-5 mb-5">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="section-header text-center text-white pb-5">
-                    <h2>Gestiona</h2>
-                    <p>Aquí podrá usted contactar de forma directa si desea vender o alquilar su propiedad</p>
+    <section class="contact section-padding">
+        <div class="container mt-5 mb-5">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="section-header text-center text-white pb-5">
+                        <h2 tabindex="0" aria-label="Gestiona tu propiedad">Gestiona</h2>
+                        <p tabindex="0">Aquí podrá usted contactar de forma directa si desea vender o alquilar su propiedad</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row m-0">
+                <div class="col-md-12 p-0 pt-4 pb-4">
+                    <form action="mailto:tu_correo@ejemplo.com" method="post" enctype="text/plain" class="bg-dark p-4 m-auto" novalidate>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="mb-3">
+                                    <label for="nombre" class="form-label text-white">Nombre <span class="text-danger">*</span></label>
+                                    <input type="text" class="form-control" id="nombre" aria-required="true" maxlength="189819" required>
+                                    <div class="invalid-feedback" aria-live="polite">Por favor, ingrese su nombre.</div>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="mb-3">
+                                    <label for="telefono" class="form-label text-white">Teléfono <span class="text-danger">*</span></label>
+                                    <input type="tel" class="form-control" id="telefono" aria-required="true" pattern="\d{9}" maxlength="9" required>
+                                    <div class="invalid-feedback" aria-live="polite">Por favor, ingrese un teléfono válido de 9 dígitos.</div>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="mb-3">
+                                    <label for="correo" class="form-label text-white">Correo <span class="text-danger">*</span></label>
+                                    <input type="email" class="form-control" id="correo" aria-required="true" maxlength="320" required>
+                                    <div class="invalid-feedback" aria-live="polite">Por favor, ingrese un correo electrónico válido.</div>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="mb-3">
+                                    <label for="mensaje" class="form-label text-white">Mensaje <span class="text-danger">*</span></label>
+                                    <textarea class="form-control" id="mensaje" aria-required="true" rows="3" required></textarea>
+                                    <div class="invalid-feedback" aria-live="polite">Por favor, ingrese su mensaje.</div>
+                                </div>
+                            </div>
+                            <button id="submit-btn" class="btn btn-primary btn-lg btn-block mt-3" type="submit">Enviar</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
-        <div class="row m-0">
-            <div class="col-md-12 p-0 pt-4 pb-4">
-                <form action="mailto:tu_correo@ejemplo.com" method="post" enctype="text/plain" class="bg-dark p-4 m-auto" novalidate>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="mb-3">
-                                <label for="nombre" class="form-label text-white">Nombre <span class="text-danger">*</span></label>
-                                <input type="text" class="form-control" id="nombre" maxlength="189819" required>
-                                <div class="invalid-feedback">Por favor, ingrese su nombre.</div>
-                            </div>
-                        </div>
-                        <div class="col-md-12">
-                            <div class="mb-3">
-                                <label for="telefono" class="form-label text-white">Teléfono <span class="text-danger">*</span></label>
-                                <input type="tel" class="form-control" id="telefono" pattern="\d{9}" maxlength="9" required>
-                                <div class="invalid-feedback">Por favor, ingrese un teléfono válido de 9 dígitos.</div>
-                            </div>
-                        </div>
-                        <div class="col-md-12">
-                            <div class="mb-3">
-                                <label for="correo" class="form-label text-white">Correo <span class="text-danger">*</span></label>
-                                <input type="email" class="form-control" id="correo" maxlength="320" required>
-                                <div class="invalid-feedback">Por favor, ingrese un correo electrónico válido.</div>
-                            </div>
-                        </div>
-                        <div class="col-md-12">
-                            <div class="mb-3">
-                                <label for="mensaje" class="form-label text-white">Mensaje <span class="text-danger">*</span></label>
-                                <textarea class="form-control" id="mensaje" rows="3" required></textarea>
-                                <div class="invalid-feedback">Por favor, ingrese su mensaje.</div>
-                            </div>
-                        </div>
-                        <button id="submit-btn" class="btn btn-primary btn-lg btn-block mt-3" type="submit">Enviar</button>
-                    </div>
-                </form>
-            </div>
-        </div>
+    </section>
+
+    <div class="help-icon" role="button" aria-label="Mostrar mensaje de ayuda" tabindex="0" onclick="showHelpMessage()" onkeypress="if(event.key === 'Enter') showHelpMessage()">
+        i
     </div>
-</section>
-
-<div class="help-icon" onclick="showHelpMessage()">
-    i
-</div>
-
-
- <!---------------------------------------------------------------------------------->
-    <!--------------------------------FOOTER-------------------------------------------------->
 
     <footer class="pie-pagina pie-pagina-dark bg-dark mt-5">
         <div class="grupo-1">
             <div class="box">
                 <figure>
                     <a href="#">
-                        <img src="img/logo_footer.png" alt="logo en el que se ve una casa ">
+                        <img src="img/logo_footer.png" alt="Logo en el que se ve una casa">
                     </a>
                 </figure>
             </div>
             <div class="box">
-                <p class="mt-4 mb-5"><i class="bi bi-geo-fill"></i>Calle Blvr. Louis Pasteur,35 <br> <i
-                        class="bi bi-phone-fill"></i> 952 13 28 42 <br><i class="bi bi-envelope-fill"></i>
-                    malagadreamhome@gmail.es</p>
+                <p class="mt-4 mb-5" tabindex="0"><i class="bi bi-geo-fill"></i> Calle Blvr. Louis Pasteur,35 <br> <i class="bi bi-phone-fill"></i> 952 13 28 42 <br> <i class="bi bi-envelope-fill"></i> malagadreamhome@gmail.es</p>
             </div>
-
             <div class="box">
-                <h2>SIGUENOS</h2>
+                <h2 tabindex="0">Síguenos</h2>
                 <div class="redes-social">
-                    <a href="https://www.twitter.com" target="_blank" class="bi bi-twitter" aria-label="twitter"></a>
-                    <a href="https://www.facebook.com" target="_blank" class="bi bi-facebook"aria-label="facebook"></a>
-                    <a href="https://www.instagram.com" target="_blank" class="bi bi-instagram" aria-label="instagram"></a>
-                    <a href="https://www.linkedin.com" target="_blank" class="bi bi-linkedin" aria-label="linkedin"></a>
+                    <a href="https://www.twitter.com" target="_blank" class="bi bi-twitter" aria-label="Twitter"></a>
+                    <a href="https://www.facebook.com" target="_blank" class="bi bi-facebook" aria-label="Facebook"></a>
+                    <a href="https://www.instagram.com" target="_blank" class="bi bi-instagram" aria-label="Instagram"></a>
+                    <a href="https://www.linkedin.com" target="_blank" class="bi bi-linkedin" aria-label="LinkedIn"></a>
                 </div>
             </div>
         </div>
-
-        <div class="grupo-2">
-            <small>
-                &copy;2024 <b>Malaga Dream Home</b> - Todos los derechos reservados -
-            </small>
+        <div class="grupo-2" tabindex="0">
+            <small>&copy;2024 <b>Malaga Dream Home</b> - Todos los derechos reservados -</small>
         </div>
     </footer>
-
-    <!---------------------------------------------------------------------------------->
-    <!---------------------------------------------------------------------------------->
-
 
     <!-- All Js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -164,7 +133,6 @@
         crossorigin="anonymous"></script>
     <script src="js/gestiona_propiedad.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
-
 
 </body>
 
