--- a/detalle_piso.html
+++ b/detalle_piso.html
@@ -49,7 +49,7 @@
         </div>
     </nav>
     <div class="container mt-5 text-white">
-        <h1>Detalles del Piso</h1>
+        <h1 tabindex="0">Detalles del Piso</h1>
         <div id="detallePisoContainer" class="row">
             <!-- Aquí se llenará la información del piso -->
         </div>
@@ -70,11 +70,11 @@
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#modalCarousel" data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
+                            <span class="visually-hidden">Anterior foto</span>
                         </button>
                         <button class="carousel-control-next" type="button" data-bs-target="#modalCarousel" data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
+                            <span class="visually-hidden">Posterior foto</span>
                         </button>
                     </div>
                 </div>
@@ -88,17 +88,17 @@
             <div class="col-md-8">
                 <div id="carouselContainer" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselE" data-bs-slide-to="0" class="active" aria-current="true"
+                        <button type="button" data-bs-target="#carouselContainer" data-bs-slide-to="0" class="active" aria-current="true"
                             aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselE" data-bs-slide-to="1" aria-current="true"
+                        <button type="button" data-bs-target="#carouselContainer" data-bs-slide-to="1" aria-current="true"
                             aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselE" data-bs-slide-to="2" aria-current="true"
+                        <button type="button" data-bs-target="#carouselContainer" data-bs-slide-to="2" aria-current="true"
                             aria-label="Slide 3"></button>
-                            <button type="button" data-bs-target="#carouselE" data-bs-slide-to="3" aria-current="true"
+                            <button type="button" data-bs-target="#carouselContainer" data-bs-slide-to="3" aria-current="true"
                             aria-label="Slide 4"></button>
-                            <button type="button" data-bs-target="#carouselE" data-bs-slide-to="4" aria-current="true"
+                            <button type="button" data-bs-target="#carouselContainer" data-bs-slide-to="4" aria-current="true"
                             aria-label="Slide 5"></button>
-                            <button type="button" data-bs-target="#carouselE" data-bs-slide-to="5" aria-current="true"
+                            <button type="button" data-bs-target="#carouselContainer" data-bs-slide-to="5" aria-current="true"
                             aria-label="Slide 6"></button>
                     </div>
                     <div class="carousel-inner" id="carouselInner">
@@ -122,9 +122,9 @@
     <div class="row m-0">
         <div class="col-md-12 p-0 pt-4 pb-4">
         <p>
-            <h2 style="margin-left: 10px;">¿Quiere más información del inmueble? Contacte con nosotros</h2>
+            <h2 style="margin-left: 10px;" tabindex="0">¿Quiere más información del inmueble? Contacte con nosotros</h2>
          </p>
-            <form action="mailto:tu_correo@ejemplo.com" method="post" enctype="text/plain" class="bg-dark p-4 m-auto" novalidate>
+            <form action="mailto:iumalagadreamhome@gmail.com" method="post" enctype="text/plain" class="bg-dark p-4 m-auto" novalidate>
                 <div class="row">
                     <div class="col-md-12">
                         <div class="mb-3">
@@ -268,25 +268,37 @@
             firstAttempt = false;
             validateForm();
         } else {
+            event.preventDefault(); // Prevenir el comportamiento de envío por defecto
+
+            // Obtiene los valores de los campos del formulario
+            let nombre = document.querySelector('input[type="text"]').value;
+            let telefono = document.querySelector('input[type="tel"]').value;
+            let correo = document.querySelector('input[type="email"]').value;
+            let mensaje = document.querySelector('textarea').value;
+
+            // Construye el contenido del correo
+            let contenido = `Nombre: ${nombre}\nTeléfono: ${telefono}\nCorreo: ${correo}\nMensaje: ${mensaje}`;
+
+            // Abre el cliente de correo con los datos predefinidos
+            window.open(`mailto:iumalagadreamhome@gmail.com?subject=Consulta&body=${encodeURIComponent(contenido)}`);
+
             form.classList.add('was-validated');
         }
     }, false);
 });
 
-
 function showHelpMessage() {
-   
     // Mostrar el mensaje de ayuda
     alert("Todos los campos con el símbolo '*' son obligatorios");
 
-            // Crear un elemento de audio
-        var audioElement = document.createElement('audio');
+    // Crear un elemento de audio
+    var audioElement = document.createElement('audio');
 
-        // Establecer la ruta del archivo de audio
-        audioElement.setAttribute('src', 'sonidos/Sonido_ventana.mp3');
+    // Establecer la ruta del archivo de audio
+    audioElement.setAttribute('src', 'sonidos/Sonido_ventana.mp3');
 
-        // Reproducir el sonido
-        audioElement.play();
+    // Reproducir el sonido
+    audioElement.play();
 }
 
 
