--- a/gestionaPropiedad.html
+++ b/gestionaPropiedad.html
@@ -22,7 +22,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a href="index.html" class="navbar-brand"> <span class="text-primary">Málaga</span> DreamHome</a>
+            <a href="index.html" class="navbar-brand"> <span class="text-primary">Málaga</span>DreamHome</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarS"
                 aria-controls="navbarS" aria-expanded="false" aria-label="Botón de navegación">
                 <span class="navbar-toggler-icon"></span>
@@ -58,7 +58,7 @@
             </div>
             <div class="row m-0">
                 <div class="col-md-12 p-0 pt-4 pb-4">
-                    <form action="mailto:tu_correo@ejemplo.com" method="post" enctype="text/plain" class="bg-dark p-4 m-auto" novalidate>
+                    <form action="mailto:iumalagadreamhome@gmail.com" method="post" enctype="text/plain" class="bg-dark p-4 m-auto" novalidate>
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="mb-3">
