--- a/calculadora.html
+++ b/calculadora.html
@@ -170,10 +170,15 @@
                     </div>
                 </div>
                 <!-- Columna del resultado de la hipoteca -->
-                <div class="col-lg-6 col-md-12 col-12 mt-5 px-lg-4"> <!-- Añadida clase px-lg-4 -->
-                    <div id="resultado-hipoteca" class="text-white"></div>
-                    <div id="cuota-mensual" class="text-white"></div>
+                <div class="col-lg-6 col-md-12 col-12 mt-5 px-lg-4">
+                    <div id="resultado-hipoteca" class="text-white" role=region aria-label="Resultado hipoteca" tabindex="0"  >
+
+                    </div>
+                    <div id="cuota-mensual" class="text-white" role="region" aria-label="Cuota mensual" tabindex="0">
+                        <!-- Contenido dinámico de la cuota mensual -->
+                    </div>
                 </div>
+                
             </div>
         </div>
     </section>
