--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Málaga Dream Home</title>
+    <title>Málaga Dream Home, la inmobiliaria que te da lo que necesitas</title>
 
     <!--Icono pestaña del navegador-->
     <link rel="icon" type="favicon2/png" href="./img/favicon2.png" alt="Icono de la pestaña del navegador">
@@ -186,7 +186,7 @@
 </div>
 
 <div class="container text-center"> <!-- Contenedor adicional para centrar el botón -->
-    <button id="btnEliminarFiltros" class="btn btn-secondary">Eliminar Filtros</button> 
+    <button id="btnEliminarFiltros" class="btn btn-secondary">Eliminar Filtrosssssss</button> 
     <button id="btnAplicarFiltros" class="btn btn-primary">Aplicar Filtros</button>
 </div>  
 
