--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 </div>
 
 <div class="container text-center"> <!-- Contenedor adicional para centrar el botón -->
-    <button id="btnEliminarFiltros" class="btn btn-secondary">Eliminar Filtrosssssss</button> 
+    <button id="btnEliminarFiltros" class="btn btn-secondary">Eliminar Filtros</button> 
     <button id="btnAplicarFiltros" class="btn btn-primary">Aplicar Filtros</button>
 </div>  
 
