--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Málaga Dream Home, la inmobiliaria que te da lo que necesitas</title>
+    <title>Málaga Dream Home</title>
 
     <!--Icono pestaña del navegador-->
     <link rel="icon" type="favicon2/png" href="./img/favicon2.png" alt="Icono de la pestaña del navegador">
@@ -191,7 +191,7 @@
 </div>  
 
 <div id="totalPisos" class="container text-center mt-4">
-    <p class="text-white" tabindex="0" aria-label="Total de inmuebles mostrados:">Total de inmuebles mostrados: <span id="totalPisosCount">0</span></p>
+    <p class="text-white" tabindex="0" aria-label="Total de inmuebles mostrados:">Total de inmuebles mostrados: <span id="totalPisosCount" aria-live="polite">0</span></p>
 </div>
 
 <!-- Mensaje ARIA para lectores de pantalla -->
