--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 </div>  
 
 <div id="totalPisos" class="container text-center mt-4">
-    <p class="text-white" tabindex="0" aria-label="Total de inmuebles mostrados:">Total de inmuebles mostrados: <span id="totalPisosCount" aria-live="polite">0</span></p>
+    <p class="text-white" tabindex="0" aria-live="polite">Total de inmuebles mostrados: <span id="totalPisosCount" aria-live="assertive">0</span></p>
 </div>
 
 <!-- Mensaje ARIA para lectores de pantalla -->
