--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -229,31 +229,28 @@
             <div class="box">
                 <figure>
                     <a href="#">
-                        <img src="img/logo_footer.png" alt="logo en el que se ve una casa">
+                        <img src="img/logo_footer.png" alt="Logo en el que se ve una casa">
                     </a>
                 </figure>
             </div>
             <div class="box">
-                <p class="mt-4 mb-5"><i class="bi bi-geo-fill"></i>Calle Blvr. Louis Pasteur,35 <br> <i
-                        class="bi bi-phone-fill"></i> 952 13 28 42 <br><i class="bi bi-envelope-fill"></i>
-                    malagadreamhome@gmail.es</p>
+                <p class="mt-4 mb-5" tabindex="0"><i class="bi bi-geo-fill"></i> Calle Blvr. Louis Pasteur,35 <br> <i class="bi bi-phone-fill"></i> 952 13 28 42 <br> <i class="bi bi-envelope-fill"></i> malagadreamhome@gmail.es</p>
             </div>
             <div class="box">
-                <h2>SIGUENOS</h2>
+                <h2 tabindex="0">Síguenos</h2>
                 <div class="redes-social">
-                    <a href="https://www.twitter.com" target="_blank" class="bi bi-twitter" aria-label="twitter"></a>
-                    <a href="https://www.facebook.com" target="_blank" class="bi bi-facebook"aria-label="facebook"></a>
-                    <a href="https://www.instagram.com" target="_blank" class="bi bi-instagram" aria-label="instagram"></a>
-                    <a href="https://www.linkedin.com" target="_blank" class="bi bi-linkedin" aria-label="linkedin"></a>
+                    <a href="https://www.twitter.com" target="_blank" class="bi bi-twitter" aria-label="Twitter"></a>
+                    <a href="https://www.facebook.com" target="_blank" class="bi bi-facebook" aria-label="Facebook"></a>
+                    <a href="https://www.instagram.com" target="_blank" class="bi bi-instagram" aria-label="Instagram"></a>
+                    <a href="https://www.linkedin.com" target="_blank" class="bi bi-linkedin" aria-label="LinkedIn"></a>
                 </div>
             </div>
         </div>
-        <div class="grupo-2">
-            <small>
-                &copy;2024 <b>Malaga Dream Home</b> - Todos los derechos reservados -
-            </small>
+        <div class="grupo-2" tabindex="0">
+            <small>&copy;2024 <b>Malaga Dream Home</b> - Todos los derechos reservados -</small>
         </div>
     </footer>
+
 
     <!-- All Js -->
      <!-- All Js -->
