Cruz ventana flotante derecha y otros arreglos

--- a/calculadora.html
+++ b/calculadora.html
@@ -135,10 +135,11 @@
     <div id="modal" class="modal">
         <!-- Contenido del modal -->
         <div class="modal-content">
-            <span class="close" aria-label="Cerrar" tabindex="0">&times;</span>
+            <span class="close close-right" aria-label="Cerrar" tabindex="0">&times;</span>
             <p id="modal-content-paragraph" tabindex="0"></p>
         </div>
     </div>
+    
 
 
 
@@ -198,8 +199,7 @@
         </div>
     </section>
 
-    <div class="help-icon" role="button" aria-label="Mostrar mensaje de ayuda" tabindex="0" onclick="showHelpMessage()"
-        onkeypress="if(event.key === 'Enter') showHelpMessage()">
+    <div class="help-icon" role="button" aria-label="Mostrar mensaje de ayuda" tabindex="0" onclick="showHelpMessage()" onkeypress="if(event.key === 'Enter') showHelpMessage()">
         i
     </div>
     <!---------------------------------------------------------------------------------->
