--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -56,7 +56,7 @@
     <section class="questions__container">
         <article class="questions__padding">
             <div class="questions__answer">
-                <h3 class="questions__title" tabindex="0" aria-expanded="false">
+                <h3 class="questions__title" tabindex="0">
                     ¿Cómo contacto?
                     <span class="questions__arrow">
                         <i class="questions__i bi bi-arrow-up-short"></i>
@@ -77,7 +77,7 @@
 
         <article class="questions__padding">
             <div class="questions__answer">
-                <h3 class="questions__title" tabindex="0" aria-expanded="false">
+                <h3 class="questions__title" tabindex="0">
                     ¿Cómo busco inmuebles?
                     <span class="questions__arrow">
                         <i class="questions__i bi bi-arrow-up-short"></i>
@@ -94,7 +94,7 @@
 
         <article class="questions__padding">
             <div class="questions__answer">
-                <h3 class="questions__title" tabindex="0" aria-expanded="false">
+                <h3 class="questions__title" tabindex="0">
                     ¿Cómo calculo mi hipoteca?
                     <span class="questions__arrow">
                         <i class="questions__i bi bi-arrow-up-short"></i>
