--- a/gestionaPropiedad.html
+++ b/gestionaPropiedad.html
@@ -57,8 +57,7 @@
             </div>
 
   
-<!--Botón ayuda-->
-
+            <!--BOTÓN AYUDA-->
             <button class="help-icon" aria-label="Mostrar mensaje de ayuda" onclick="showModal()">i</button>
 
             <!-- Modal -->
@@ -66,11 +65,10 @@
                 <div class="modal-content" tabindex="0">
                     <h2 id="modalTitle">Mensaje de Ayuda</h2>
                     <p id="modalDescription">Todos los campos con el símbolo '*' son obligatorios.</p>
-                    <button class="modal-close" onclick="closeModal()" aria-label="Cerrar ventana">×</button>
+                    <button class="close" onclick="closeModal()" aria-label="Cerrar ventana">×</button>
                 </div>
             </div>
-        
-<!--Fin Botón ayuda-->
+            <!--Fin Botón ayuda-->
 
             <div class="row m-0">
                 <div class="col-md-12 p-0 pt-4 pb-4">
@@ -115,8 +113,6 @@
 
   
     
-
-
     <footer class="pie-pagina pie-pagina-dark bg-dark mt-5">
         <div class="grupo-1">
             <div class="box">
